<resources>
    <string name="app_name">Litel App</string>
    <string name="litel_title">LITEL</string>
    <string name="your_listing_hotel_app">Your Listing Hotel App</string>
    <string-array name="hotel_image">
        <item>@drawable/hotel1</item>
        <item>@drawable/hotel2</item>
        <item>@drawable/hotel3</item>
        <item>@drawable/hotel4</item>
        <item>@drawable/hotel5</item>
        <item>@drawable/hotel6</item>
        <item>@drawable/hotel7</item>
        <item>@drawable/hotel8</item>
        <item>@drawable/hotel9</item>
        <item>@drawable/hotel10</item>
    </string-array>
    <string name="sample_hotel_name">Your Hotel Name</string>
    <string name="sample_hotel_stars_ratings">Your Hotel Stars / Rating</string>
    <string name="sample_hotel_price">US$60 - US$120</string>
    <string name="sample_hotel_address">Jl Jenggala no 1, Kuta, 80361 Kuta, Indonesia</string>
    <string name="button_to_profile">Button to Profile</string>
    <string name="description">Description</string>
    <string name="sample_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="us_64_us_130_night">US$64 - US$130/night</string>
    <string name="_9_5_10_0">⭐⭐⭐⭐⭐ | 9.5/10.0</string>
    <string name="author_name">HAFIZ CANIAGO</string>
    <string name="author_mail">hafizcode02@gmail.com</string>
    <string-array name="hotel_name">
        <item>Palm Beach Hotel Bali</item>
        <item>Mahagiri Resort Nusa Lembongan</item>
        <item>Jimbaran Beach Villas</item>
        <item>Phinisi Villas - Seminyak Beach</item>
        <item>White Palm Hotel Bali</item>
        <item>Bali Sunshine Inn Nusa Dua</item>
        <item>Apple Villa Suite Seminyak</item>
        <item>The Sebali Resort</item>
        <item>Gajah Biru Bungalows</item>
        <item>Sahadewa Resort Spa</item>
    </string-array>
    <string-array name="hotel_star_rating">
        <item>⭐⭐⭐ | 8.5/10.0</item>
        <item>⭐⭐⭐⭐⭐ | 8.5/10.0</item>
        <item>⭐⭐⭐⭐ | 9.3/10.0</item>
        <item>⭐⭐⭐⭐ | 9.2/10.0</item>
        <item>⭐⭐⭐⭐ | 8.1/10.0</item>
        <item>⭐⭐⭐ | 8.3/10.0</item>
        <item>⭐⭐⭐⭐ | 7.6/10.0</item>
        <item>⭐⭐⭐⭐⭐ | 9.0/10.0</item>
        <item>⭐⭐⭐ | 7.4/10.0</item>
        <item>⭐⭐⭐⭐ | 7.9/10.0</item>
    </string-array>
    <string-array name="hotel_address">
        <item>Jl Jenggala no 1, Kuta, 80361 Kuta, Indonesia </item>
        <item>Desa Jungut Batu, 80771 Nusa Lembongan, Indonesia</item>
        <item>Jl. Bukit Jimbaran, Komplek Karma Jimbaran Villa No.21, 80362 Jimbaran, Indonesia</item>
        <item>Jalan Sari Dewi Gang Khayangan No. 7, 80361 Seminyak, Indonesia</item>
        <item>Jalan Pantai Balangan, jimbaran, 80361 Jimbaran, Indonesia</item>
        <item>JL Pratama Raya link Cetuk,Benoa Kab Badung Kuta Selatan Nusa Dua, 80361 Nusa Dua, Indonesia</item>
        <item>Jalan Mertanadi No 89, 80361 Seminyak, Indonesia</item>
        <item>Br. Kepitu Desa Kenderan, 80571 Ubud, Indonesia</item>
        <item>Jalan Raya Penestanan Kelod Sayan, 80571 Ubud, Indonesia</item>
        <item>Jl. Hanoman, 80571 Ubud, Indonesia</item>
    </string-array>
    <string-array name="hotel_price">
        <item>US$64 - US$130/night</item>
        <item>US$164 - US$275/night</item>
        <item>US$716 - US$1,022/night</item>
        <item>US$424 - US$1,317/night</item>
        <item>US$251 - US$340/night</item>
        <item>US$68 - US$168/night</item>
        <item>US$53 - US$439/night</item>
        <item>US$453 - US$1,561/night</item>
        <item>US$58 - US$161/night</item>
        <item>US$56 - US$118/night</item>
    </string-array>
</resources>