<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="#f2f2f2"
    android:padding="8dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/hotelImg"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/hotel_image"
            android:scaleType="center"
            tools:ignore="MissingConstraints"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/hotelName"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/hotelImg"
            app:layout_constraintTop_toTopOf="@id/hotelImg"
            tools:text="@string/sample_hotel_name" />

        <TextView
            android:id="@+id/hotelStarsAndRating"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="82dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/hotelName"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/hotelImg"
            tools:text="@string/sample_hotel_stars_ratings" />

        <TextView
            android:id="@+id/hotelPrice"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="82dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/hotelStarsAndRating"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/hotelImg"
            tools:text="@string/sample_hotel_price" />

        <TextView
            android:id="@+id/hotelAddress"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="82dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/hotelPrice"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/hotelImg"
            tools:text="@string/sample_hotel_address" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>