<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageDetail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:importantForAccessibility="no"
            android:scaleType="center"
            android:src="@drawable/hotel1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:alpha="0.8"
            android:background="@drawable/roundcorner"
            android:importantForAccessibility="no"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="350dp"
            android:layout_height="170dp"
            android:layout_marginTop="220dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/hotelName_Detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_hotel_name"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_black"
                    android:layout_marginTop="8dp"/>
                <TextView
                    android:id="@+id/hotelAddress_Detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/sample_hotel_address" />
                <TextView
                    android:id="@+id/hotelPrice_Detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/us_64_us_130_night"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/poppins_medium"/>

                <TextView
                    android:id="@+id/hotelStarsAndRating_Detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_9_5_10_0"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/poppins_medium"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/description_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/description"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <TextView
            android:id="@+id/description_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_light"
            android:justificationMode="inter_word"
            android:text="@string/sample_description"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/description_tag" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#01B074"
            android:text="SHARE"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_val" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
